build/resources/test/LO-2/InvalidPrograms/test_12.lo
// Missing operand

bool main(){
  int a, b;
  {
    a = 96;
    b = 56;
    return ((a = 1) ? b : );
  }
}